specify either bg to avoid flicker for alt bg

--- a/css/style.css
+++ b/css/style.css
@@ -182,9 +182,17 @@ main {
   width: 100%;
   height: 90vh;
   height: calc(100vh - 60px);
-  background: linear-gradient(45deg, rgba(54, 59, 64, 0.8), rgba(54, 98, 115, 0.8)), url("/img/intro-bg.jpg") center top no-repeat;
+  background: linear-gradient(45deg, rgba(54, 59, 64, 0.8), rgba(54, 98, 115, 0.8));
   background-size: cover;
   position: relative;
+}
+
+#intro.rnd-1,
+#intro.rnd-2,
+#intro.rnd-3,
+#intro.rnd-4,
+#intro.rnd-5 {
+  background: linear-gradient(45deg, rgba(54, 59, 64, 0.8), rgba(54, 98, 115, 0.8)), url("/img/intro-bg.jpg") center top no-repeat;
 }
 
 #intro.rnd-6,
@@ -192,7 +200,7 @@ main {
 #intro.rnd-8,
 #intro.rnd-9,
 #intro.rnd-10 {
-  background: linear-gradient(45deg, rgba(54, 59, 64, 0.8), rgba(54, 98, 115, 0.8)), url("/img/intro-bg2.jpg");
+  background: linear-gradient(45deg, rgba(54, 59, 64, 0.8), rgba(54, 98, 115, 0.8)), url("/img/intro-bg2.jpg") center top no-repeat;
 }
 
 @media (min-width: 1024px) {
